tests/error/errors_on_usage/var_in_modifier4.py
from guppylang import guppy
from guppylang.std.builtins import power

@guppy
def main() -> None:
    with power(3):
        i = 3
    u = i
                
main.check()
