tests/error/errors_on_usage/var_in_modifier4.err
Error: Variable assigned in modifier block (at $FILE:8:8)
  | 
6 |     with power(3):
7 |         i = 3
8 |     u = i
  |         ^ `i` cannot be used...

Note:
  | 
6 |     with power(3):
7 |         i = 3
  |         ----- ... since it was assigned in a modifier block

Help: Variables assigned inside a modifier block are not available outside the
block

Guppy compilation failed due to 1 previous error
